--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
   <div class="field">
     <label for="title">Title:</label>
-    <input name="title" id="title" id="title" #newtitle>
+    <input name="title" id="title" #newtitle>
   </div>
   <div class="field">
     <label for="link">Link:</label>
@@ -14,3 +14,11 @@
     Submit link
   </button>
 </form>
+
+<div class="ui grid posts">
+  <app-article
+    *ngFor="let article of articles"
+    [article]="article">
+  </app-article>
+</div>
+
